RESOLVED FIXED312691
Fix imported/w3c/web-platform-tests/css/css-display/display-contents-dynamic-fieldset-legend-001.htm
https://bugs.webkit.org/show_bug.cgi?id=312691
Summary Fix imported/w3c/web-platform-tests/css/css-display/display-contents-dynamic-...
alan
Reported 2026-04-18 15:19:52 PDT
ssia
Attachments
[fast-cq]Patch (2.46 KB, patch)
2026-04-18 15:25 PDT, alan
no flags
alan
Comment 1 2026-04-18 15:25:40 PDT
Created attachment 479204 [details] [fast-cq]Patch
EWS
Comment 2 2026-04-20 07:08:44 PDT
Committed 311585@main (dd810a235c60): <https://commits.webkit.org/311585@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479204 [details].
Radar WebKit Bug Importer
Comment 3 2026-04-20 07:09:12 PDT
Note You need to log in before you can comment on or make changes to this bug.