Fieldset with legend is too tall on first layout when it's a flex item https://bugs.webkit.org/show_bug.cgi?id=312691

Reviewed by Antti Koivisto.

When a fieldset's legend is removed the intrinsic border (on the fieldset) is left stale.
On the next layout, layoutBlockChildren sees this state intrinsic border and stretches the logical height with it.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::willBeRemovedFromTree):

Canonical link: https://commits.webkit.org/311585@main